# uk-gas-supply-demand-webapp

./: .gitignore  README.md  pyproject.toml
backend/GasModelUk/Api/: api_app.py  api_models.py  api_router.py  api_service.py  etl_service.py
backend/GasModelUk/Cli/: cli_app.py
backend/GasModelUk/Config/: app_settings.py
backend/GasModelUk/Constants/: gas_flow_registry.py  scraper_registry.py
backend/GasModelUk/DemoData/: scraper_response.json  static_demo_data.py
backend/GasModelUk/Exceptions/: excel_storage_error.py
backend/GasModelUk/Extract/: __init__.py  base_scraper.py  cross_border_flows_scraper.py  demand_scraper.py  lng_scraper.py  national_grid_publication_scraper.py  production_scraper.py  request_creator.py  scraper_factory.py  storage_scraper.py
backend/GasModelUk/Models/: base_request.py  cross_border_gas_flow_record.py  demand_gas_flow_record.py  flow_types.py  lng_gas_flow_record.py  national_grid_post_request.py  raw_lng_gas_flow_dataset.py  raw_ncs_gas_flow_dataset.py  raw_storage_gas_flow_dataset.py  scrape_request.py
backend/GasModelUk/Orchestration/: etl_pipeline.py
backend/GasModelUk/Storage/: base_storage.py  excel_storage.py
backend/GasModelUk/Utilities/: date_utils.py
data/: demo_data.xlsx  gas_flows.xlsx
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/Api/: gasFlowApi.ts
frontend/src/Components/: BalanceChart.tsx  (+6 more)
tests/: test_api_service.py  test_request_creator.py  test_scraper_parsing.py  test_scraper_registry.py  test_transformer.py
(+29 files in other folders)
