[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gas-model-uk"
version = "0.1.0"
description = "Excel-backed ETL/API/backend and React dashboard skeleton for UK gas flows."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
]

[project.scripts]
gas-model-uk = "GasModelUk.Cli.cli_app:app"

[tool.hatch.build.targets.wheel]
packages = ["backend/GasModelUk"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
